fix spacing and timing

--- a/src/app/components/About/About.module.scss
+++ b/src/app/components/About/About.module.scss
@@ -245,6 +245,7 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding: 0;
   }
 
   .gridRight {
@@ -252,6 +253,7 @@
     padding-top: 0;
     display: flex;
     justify-content: flex-end;
+    padding: var(--padding);
   }
 
   .aboutSphereUpper {
