--- a/src/app/components/Contact/Contact.module.scss
+++ b/src/app/components/Contact/Contact.module.scss
@@ -24,5 +24,6 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    padding: 0;
   }
 }
