--- a/src/app/components/SharedNav/SharedNav.module.scss
+++ b/src/app/components/SharedNav/SharedNav.module.scss
@@ -25,7 +25,7 @@
   transition: color 0.3s ease-in-out;
 
   line-height: 6rem;
-  margin-bottom: 2rem;
+  margin-bottom: 3rem;
 
   &:hover {
     color: var(--secondary-color);
@@ -38,7 +38,6 @@
   justify-content: flex-start;
   width: 100%;
   align-items: center;
-  margin-top: 2rem;
 }
 
 .link {
@@ -73,7 +72,7 @@
     align-items: flex-start;
     height: 32vh;
     width: 100%;
-    padding: 0 5%;
+    padding: 5% 5% 0 5%;
 
     & a {
       line-height: 4rem;
@@ -81,6 +80,12 @@
       font-size: 4rem;
       margin-bottom: 0;
       width: 100%;
+    }
+  }
+
+  .navLink {
+    &:hover {
+      color: var(--primary-color);
     }
   }
 
